--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jacky Wu</title>
+    <title>Personal Portfolio Website - Jacky Wu</title>
+    <link rel="stylesheet" , href="style.css" />
   </head>
   <body></body>
 </html>
