--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Personal Portfolio Website - Jacky Wu</title>
     <link rel="stylesheet" , href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="header"></div>
+  </body>
 </html>
