Added Letter J Logo Image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" , href="style.css" />
   </head>
   <body>
-    <div id="header"></div>
+    <div id="header">
+      <div class="container">
+        <nav>
+          <img src="images/logo.jpg" class="logo" />
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
