--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body class="main-content">
+    <header class="section sec1 header active">
+      <i class="fa-brands fa-instagram"></i>
+    </header>
+    <main>
+      <section class="section sec2 about"></section>
+      <section class="section sec3 portfolio"></section>
+      <section class="section sec4 blogs"></section>
+      <section class="section sec5 contact"></section>
+    </main>
+  </body>
 </html>
