Styled Active Button
1) Change active control to green if it is the active button.
2) !important allows the declaration to override all other declarations.
3) transition smooths out the colour transitions when a button goes into the active state.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="section sec5 contact"></section>
     </main>
     <div class="controls">
-      <div class="control control-1 active btn">
+      <div class="control control-1 active-btn">
         <i class="fa-solid fa-house"></i>
       </div>
       <div class="control control-2" data-id="about">
