--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
         <i class="fa-solid fa-address-book"></i>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
