Structuring Header Element
1) Profile Image on left side.
2) Profile Info Text on right side.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
     />
   </head>
   <body class="main-content">
-    <header class="section sec1 header active" id="home"></header>
+    <header class="section sec1 header active" id="home">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image"><img src="img/hero.jpg" alt="" "/></div>
+        </div>
+        <div class="right-header">
+          <h1 class="name">
+            Hi, I'm <span>Jacky Wu.</span>
+            A Web Developer.
+          </h1>
+          <p>
+            I'm a Web Developer, I love to create beautiful and functional
+            websites.
+          </p>
+          <a href="" class="main-btn">
+            <span class="btn-text">Download CV</span>
+          </a>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="section sec2 about" id="about"></section>
       <section class="section sec3 portfolio" id="portfolio"></section>
