--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
             I'm a Web Developer, I love to create beautiful and functional
             websites.
           </p>
-          <a href="" class="main-btn">
-            <span class="btn-text">Download CV</span>
-          </a>
+          <div class="btn-con">
+            <a href="" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon"><i class="fas fa-download"></i></span>
+            </a>
+          </div>
         </div>
       </div>
     </header>
