--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
         <div class="main-title">
           <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
         </div>
+        <div class="about-container">
+          <div class="left-about">
+            <h4>Information About me</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sequi
+              quod ratione optio dolore exercitationem perspiciatis tempore
+              provident esse numquam. Expedita obcaecati vitae id architecto
+              dolorum mollitia delectus iure ullam.
+            </p>
+            <div class="btn-con">
+              <a href="" class="main-btn">
+                <span class="btn-text">Download CV</span>
+                <span class="btn-icon"><i class="fas fa-download"></i></span>
+              </a>
+            </div>
+          </div>
+          <div class="right-about"></div>
+        </div>
       </section>
       <section class="section sec3 portfolio" id="portfolio"></section>
       <section class="section sec4 blogs" id="blogs"></section>
