--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
                 </p>
               </div>
             </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">10+</p>
+                <p class="small-text">
+                  YEARS OF <br />
+                  EXPERIENCE
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">300+</p>
+                <p class="small-text">
+                  HAPPY <br />
+                  CLIENTS
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">400+</p>
+                <p class="small-text">
+                  CUSTOMER <br />
+                  REVIEWS
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
