--- a/index.html
+++ b/index.html
@@ -110,25 +110,25 @@
             <div class="progress-bar">
               <p class="prog-title">html5</p>
               <div class="progress-con">
-                <p class="prog text">90%</p>
+                <p class="prog text">25%</p>
                 <div class="progress">
                   <span class="html"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
-              <p class="prog-title">html5</p>
+              <p class="prog-title">CSS</p>
               <div class="progress-con">
-                <p class="prog text">90%</p>
+                <p class="prog text">25%</p>
                 <div class="progress">
                   <span class="html"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
-              <p class="prog-title">html5</p>
+              <p class="prog-title">JavaScript</p>
               <div class="progress-con">
-                <p class="prog text">90%</p>
+                <p class="prog text">50%</p>
                 <div class="progress">
                   <span class="html"></span>
                 </div>
